--- a/arc-info-messages.html
+++ b/arc-info-messages.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright 2017 The Advanced REST client authors <arc@mulesoft.com>
+Copyright 2018 The Advanced REST client authors <arc@mulesoft.com>
 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
 the License at
@@ -16,48 +16,7 @@ the License.
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../arc-icons/arc-icons.html">
 <link rel="import" href="arc-info-message.html">
-<!--
-`<arc-info-messages>` A list of app messages to be displayed to the user
 
-This element is to be used with `<arc-messages-service>` element or any other
-logic that downloads messages from ARC datastore.
-
-### Example
-
-```
-<arc-info-messages messages="[[messages]]"></arc-info-messages>
-<arc-messages-service platform="chrome" messages="{{messages}}" auto-messages></arc-messages-service>
-```
-
-### Styling
-`<arc-info-messages>` provides the following custom properties and mixins for styling:
-
-Custom property | Description | Default
-----------------|-------------|----------
-`--arc-info-messages` | Mixin applied to the element | `{}`
-`--arc-info-messages-title` | Mixin applied to the title of the list | `{}`
-`--arc-info-messages-title-container` | Mixin applied to the list title container | `{}`
-`--arc-info-messages-list` | Mixin applied to the list container. | `{}`
-`--arc-info-message-separator-color` | Color of the messages separator. | `#C9C9C9`
-`--arc-info-message` | Mixin applied to the message item | `{}`
-`--arc-info-message-title-weight` | Message title width | `400`
-`--arc-info-message-unread-title-weight` | Message title width when unread. | `500`
-`--arc-info-message-title` | Mixin applied to the title of the message | `{}`
-`--arc-info-message-date-color` | Color of the date label | `rgba(0, 0, 0, 0.64)`
-`--arc-info-message-date` | Mixin applied to the date label | `{}`
-`--arc-info-message-content-color` | Color of the message | `rgba(0, 0, 0, 0.74)`
-`--arc-info-message-content` | Mixin applied to the mesage container. | `{}`
-`--arc-info-message-action-color` | Color of the action link | `--primary-color`
-`--arc-info-message-action` | Mixin applied to the action link | `{}`
-`--arc-info-message-action-container` | Mixin applied to message's action container | `{}`
-`--arc-font-body1` | Theme font | `{}`
-`--arc-font-subhead` | Theme font sub-title | `{}`
-`--arc-font-headline` | Theme font headline | `{}`
-
-@group UI Elements
-@element arc-info-messages
-@demo demo/index.html
--->
 <dom-module id="arc-info-messages">
   <template>
     <style>
@@ -90,7 +49,7 @@ Custom property | Description | Default
     </style>
     <div class="title-area">
       <h2>What’s new</h2>
-      <paper-icon-button icon="arc:close" on-tap="_sendClose"></paper-icon-button>
+      <paper-icon-button icon="arc:close" on-click="_sendClose"></paper-icon-button>
     </div>
     <div class="list">
       <template is="dom-repeat" items="[[messages]]">
@@ -99,6 +58,54 @@ Custom property | Description | Default
     </div>
   </template>
   <script>
+  /**
+   * A list of app messages to be displayed to the user
+   *
+   * This element is to be used with `<arc-messages-service>` element or
+   * any other logic that downloads messages from ARC datastore.
+   *
+   * ### Example
+   *
+   * ```
+   * <arc-info-messages messages="[[messages]]"></arc-info-messages>
+   * <arc-messages-service
+   *  platform="chrome"
+   *  messages="{{messages}}"
+   *  auto-messages></arc-messages-service>
+   * ```
+   *
+   * ### Styling
+   *
+   * `<arc-info-messages>` provides the following custom properties and mixins
+   * for styling:
+   *
+   * Custom property | Description | Default
+   * ----------------|-------------|----------
+   * `--arc-info-messages` | Mixin applied to the element | `{}`
+   * `--arc-info-messages-title` | Mixin applied to the title of the list | `{}`
+   * `--arc-info-messages-title-container` | Mixin applied to the list title container | `{}`
+   * `--arc-info-messages-list` | Mixin applied to the list container. | `{}`
+   * `--arc-info-message-separator-color` | Color of the messages separator. | `#C9C9C9`
+   * `--arc-info-message` | Mixin applied to the message item | `{}`
+   * `--arc-info-message-title-weight` | Message title width | `400`
+   * `--arc-info-message-unread-title-weight` | Message title width when unread. | `500`
+   * `--arc-info-message-title` | Mixin applied to the title of the message | `{}`
+   * `--arc-info-message-date-color` | Color of the date label | `rgba(0, 0, 0, 0.64)`
+   * `--arc-info-message-date` | Mixin applied to the date label | `{}`
+   * `--arc-info-message-content-color` | Color of the message | `rgba(0, 0, 0, 0.74)`
+   * `--arc-info-message-content` | Mixin applied to the mesage container. | `{}`
+   * `--arc-info-message-action-color` | Color of the action link | `--primary-color`
+   * `--arc-info-message-action` | Mixin applied to the action link | `{}`
+   * `--arc-info-message-action-container` | Mixin applied to message's action container | `{}`
+   * `--arc-font-body1` | Theme font | `{}`
+   * `--arc-font-subhead` | Theme font sub-title | `{}`
+   * `--arc-font-headline` | Theme font headline | `{}`
+   *
+   * @polymer
+   * @customElement
+   * @memberof UiElements
+   * @demo demo/index.html
+   */
   class ArcInfoMessages extends Polymer.Element {
     static get is() { return 'arc-info-messages'; }
     static get properties() {
