--- a/test/arc-info-message-test.html
+++ b/test/arc-info-message-test.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
-    <link rel="import" href="../arc-info-message.html">
+
+    <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../../@polymer/test-fixture/test-fixture.js"></script>
+    <script src="../../../mocha/mocha.js"></script>
+    <script src="../../../chai/chai.js"></script>
+    <script src="../../../wct-mocha/wct-mocha.js"></script>
+
   </head>
   <body>
 
@@ -15,10 +19,9 @@
       </template>
     </test-fixture>
 
-    <script>
-    /* global fixture, assert */
+    <script type="module">
+    import '../arc-info-message.js';
     suite('Basic', function() {
-
       let element;
       setup(function(done) {
         element = fixture('Basic');
